# darkmark

./: Cargo.toml  README.md  package-lock.json  package.json
app/: Cargo.toml
app/locales/: en.yaml
app/src/: lib.rs
app/src/api/: auth.rs  mod.rs
app/src/component/: credentials.rs  mod.rs  navbar.rs  region.rs  select.rs
app/src/page/: home.rs  login.rs
lib/: Cargo.toml  Readmd.md
lib/src/: lib.rs  user.rs
server/: Cargo.toml
server/src/: error.rs  main.rs  state.rs  user.rs
server/src/cloud/: mod.rs
server/src/cloud/aws/: ec2.rs  mod.rs
server/src/db/: mod.rs  region.rs
server/src/db/migrations/: 20250320204004_user.down.sql  20250320204004_user.up.sql  20250520191230_region.up.sql
style/: tailwind.css
